[gd_scene load_steps=13 format=3 uid="uid://t2r06l0hr184"]

[ext_resource type="Script" uid="uid://j801jgkt1mf" path="res://game/player/weapon.gd" id="1_1vjvc"]
[ext_resource type="AudioStream" uid="uid://dlklosv5cft1n" path="res://game/player/gun_shot_smg_rand.tres" id="2_qelip"]
[ext_resource type="PackedScene" uid="uid://mswr2wkg0tv7" path="res://game/weapons/model/weapon_shotgun_arm_l.glb" id="3_qelip"]
[ext_resource type="PackedScene" uid="uid://ddl7c7rea820a" path="res://game/weapons/model/weapon_shotgun.glb" id="3_ri3d7"]
[ext_resource type="PackedScene" uid="uid://dqwnrxai3cxi8" path="res://game/weapons/model/weapon_shotgun_arm_r.glb" id="4_kc37h"]
[ext_resource type="PackedScene" uid="uid://dn8qcdsnyofpu" path="res://game/weapons/model/muzzleflash.tscn" id="5_gwt1y"]
[ext_resource type="Script" uid="uid://cmuwwvlykmou0" path="res://game/weapons/weapon_shotgun_animations.gd" id="7_kc37h"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7w4b6"]
radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ml3f"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ls1xp"]
top_radius = 0.01
bottom_radius = 0.01
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_on6gv"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_3pcvd"]
size = Vector3(0.005, 0.07, 0.04)

[node name="WeaponShotgun" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_1vjvc")
fire_rate = 1.0
auto = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_7w4b6")

[node name="AudioShoot" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_qelip")
bus = &"SFX"

[node name="WorldModel" type="Node3D" parent="."]

[node name="RightHand" type="Marker3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0971346)

[node name="LeftHand" type="Marker3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0891441)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.000823617, 0.0554796)
visible = false
material_override = SubResource("StandardMaterial3D_6ml3f")
mesh = SubResource("CylinderMesh_ls1xp")
skeleton = NodePath("../../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 0.990105, -0.140331, 0, 0.140331, 0.990105, 0, -0.0524004, -0.0874176)
visible = false
material_override = SubResource("StandardMaterial3D_on6gv")
mesh = SubResource("BoxMesh_3pcvd")

[node name="weapon_shotgun_arm_l" parent="WorldModel" instance=ExtResource("3_qelip")]

[node name="weapon_shotgun_arm_r" parent="WorldModel" instance=ExtResource("4_kc37h")]

[node name="weapon_shotgun" parent="WorldModel" instance=ExtResource("3_ri3d7")]

[node name="Muzzleflash" parent="." instance=ExtResource("5_gwt1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0111252, 0.338293)

[node name="Animations" type="Node" parent="."]
script = ExtResource("7_kc37h")

[editable path="WorldModel/weapon_shotgun"]
